--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
+    "@tinymce/tinymce-react": "^5.1.1",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.3.4",
     "events": "^3.3.0",
