--- a/ui/package.json
+++ b/ui/package.json
@@ -10,7 +10,6 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.3",
-    "@tinymce/tinymce-react": "^5.1.1",
     "@tippyjs/react": "^4.2.6",
     "axios": "^1.3.4",
     "events": "^3.3.0",
@@ -19,6 +18,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.2",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.1"
   },
